[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/BG.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/tangled_tape.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/legal_document.jpg" type="Texture" id=3]
[ext_resource path="res://scripts/VHSVaultMain.gd" type="Script" id=4]

[node name="VHSVaultMain" type="Node2D"]
script = ExtResource( 4 )

[node name="BG" parent="." instance=ExtResource( 1 )]

[node name="Play" type="Button" parent="."]
margin_left = 736.0
margin_top = 136.0
margin_right = 816.0
margin_bottom = 172.0
text = "Play"

[node name="Explanation" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 16.0
margin_right = 320.0
margin_bottom = 288.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "This dynamic mini-game within this series of exploring landmark cases in digital piracy.

This endless runner encapsulates the essence of the Betamax lawsuit, a pivotal moment in copyright history.

This game represents the legal hurdles and evidence that shows the clash between Sony and Universal Studios.

Collect legal documents to progress the story and learn more about the case.
"

[node name="Controls" type="RichTextLabel" parent="."]
margin_left = 664.0
margin_top = 232.0
margin_right = 960.0
margin_bottom = 504.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "press SPACEBAR on your keyboard to jump.

Collect legal documents









and avoid tangled magnetic tape, walls and"

[node name="Unlockables" type="Node2D" parent="."]

[node name="Defense" type="Button" parent="Unlockables"]
margin_left = 272.0
margin_top = 272.0
margin_right = 563.0
margin_bottom = 308.0
text = "Sony's defence/Universal Studio's argument"

[node name="Context" type="Button" parent="Unlockables"]
margin_left = 272.0
margin_top = 328.0
margin_right = 398.0
margin_bottom = 364.0
text = "Historical Context"

[node name="Decision" type="Button" parent="Unlockables"]
margin_left = 272.0
margin_top = 384.0
margin_right = 439.0
margin_bottom = 420.0
text = "Supreme Court Decision"

[node name="Impact" type="Button" parent="Unlockables"]
margin_left = 272.0
margin_top = 440.0
margin_right = 439.0
margin_bottom = 476.0
text = "Legacy and Impact"

[node name="RichTextLabel2" type="RichTextLabel" parent="Unlockables"]
margin_left = 16.0
margin_top = 288.0
margin_right = 264.0
margin_bottom = 320.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Collect 5 legal documents to unlock"

[node name="RichTextLabel3" type="RichTextLabel" parent="Unlockables"]
margin_left = 16.0
margin_top = 336.0
margin_right = 264.0
margin_bottom = 368.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Die 5 times to unlock"

[node name="RichTextLabel4" type="RichTextLabel" parent="Unlockables"]
margin_left = 16.0
margin_top = 384.0
margin_right = 264.0
margin_bottom = 416.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Collect 10 legal documents to unlock"

[node name="RichTextLabel5" type="RichTextLabel" parent="Unlockables"]
margin_left = 16.0
margin_top = 448.0
margin_right = 264.0
margin_bottom = 480.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Survive for 60 seconds"

[node name="TangledTape" type="Sprite" parent="."]
position = Vector2( 736, 512 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )

[node name="LegalDocument" type="Sprite" parent="."]
position = Vector2( 728, 344 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 3 )

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Unlockables/Defense" to="." method="_on_Defense_pressed"]
[connection signal="pressed" from="Unlockables/Context" to="." method="_on_Context_pressed"]
[connection signal="pressed" from="Unlockables/Decision" to="." method="_on_Decision_pressed"]
[connection signal="pressed" from="Unlockables/Impact" to="." method="_on_Impact_pressed"]
